--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -28,7 +28,9 @@
         android:id="@+id/emptyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:layout_centerInParent="true"
+        android:text="No news!"
         android:textSize="20sp"
         android:textStyle="bold" />
 </RelativeLayout>
