--- a/app/src/main/res/layout/card_view_design.xml
+++ b/app/src/main/res/layout/card_view_design.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="6dp">
+    android:layout_margin="10dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="10dp"
+    app:cardMaxElevation="12dp"
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,11 +19,24 @@
         android:padding="5dp"
         tools:ignore="UseCompoundDrawables">
 
-        <ImageView
-            android:id="@+id/imageview"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:contentDescription="TODO" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:elevation="12dp"
+            android:innerRadius="0dp"
+            android:shape="ring"
+            android:thicknessRatio="1.9"
+            app:cardCornerRadius="40dp">
+
+            <ImageView
+                android:id="@+id/imageview"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:src="@mipmap/ic_launcher"></ImageView>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/textView"
